2010-09-22  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dave Hyatt.

        Fix wrong casts for table cell since its parent is not a RenderBlock. Remove
        the redundant destroy call for empty anonymous columns or column span block.
        https://bugs.webkit.org/show_bug.cgi?id=46245

        Tests: fast/table/table-anonymous-block-destroy-crash.html
               fast/table/table-columns-blocks-calc-crash.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::addChildToAnonymousColumnBlocks):
        (WebCore::RenderBlock::columnsBlockForSpanningElement):
        (WebCore::RenderBlock::removeChild):

2010-09-22  Matt Perry  <mpcomplete@chromium.org>

        Reviewed by Darin Fisher.

        Trying to reland a version of r67749:
        Have V8DOMWindowShell ask the embedder whether to run a V8 extension
        in a particular script context.
        https://bugs.webkit.org/show_bug.cgi?id=45721

        * bindings/v8/V8DOMWindowShell.cpp:
        (WebCore::V8DOMWindowShell::createNewContext):
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::registerExtension):
        * bindings/v8/V8Proxy.h:
        * loader/EmptyClients.h:
        (WebCore::EmptyFrameLoaderClient::allowScriptExtension):
        * loader/FrameLoaderClient.h:

2010-09-22  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        queryCommandState returns false for Underline command when no selection is made
        https://bugs.webkit.org/show_bug.cgi?id=17594

        The bug was caused by selectionComputedStyle's adding -webkit-text-decorations-in-effect property
        to a dummy span used to obtain the computed style when there is a typing style.
        Since this property is for internal use only, the CSS parser always stripped the property.
        As a result, we were always ignoring the text decorations set by the typing style.
